--- a/storybook/styles.css
+++ b/storybook/styles.css
@@ -6,6 +6,14 @@ body {
     font-size: 16px;
 }
 
+.sbdocs.sbdocs-wrapper {
+    padding: 2rem 2rem 1rem 2rem;
+}
+
+.sbdocs.sbdocs-content {
+    max-width: 1200px;
+}
+
 .sbdocs.sbdocs-h1 {
     font-weight: 600;
 }
